[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/login/loginPrompt/Login.gd" type="Script" id=1]
[ext_resource path="res://graphics/gui/map_btn/logo.png" type="Texture" id=2]
[ext_resource path="res://scene/component/dialog_box/dialog_box.tscn" type="PackedScene" id=3]

[node name="Pnl_Login" type="Panel"]
margin_left = 0.735107
margin_top = -2.7877
margin_right = 594.735
margin_bottom = 431.212
script = ExtResource( 1 )

[node name="LE_Email" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.5
margin_top = -30.0002
margin_right = 137.5
margin_bottom = 30.0002
align = 1
max_length = 255
placeholder_text = "E-mail"
caret_blink = true

[node name="LE_Password" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.5
margin_top = 51.5952
margin_right = 137.5
margin_bottom = 111.595
align = 1
max_length = 255
secret = true
placeholder_text = "Password"
caret_blink = true

[node name="Btn_Login" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 136.25
margin_right = 60.0
margin_bottom = 184.25
text = "Login"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
max_redirects = 4

[node name="logo" type="Sprite" parent="."]
position = Vector2( 299.265, 92.7877 )
scale = Vector2( 0.4189, 0.4189 )
texture = ExtResource( 2 )

[node name="PP_Notice" parent="." instance=ExtResource( 3 )]
[connection signal="button_up" from="Btn_Login" to="." method="_on_Btn_Login_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
